# slog

./: .gitignore  Bench.cpp  CMakeLists.txt  Logger.h  README.md  Test.cpp
